# BPG_utilities

./: align_originals_via_shmms_and_score.py  align_pdb_hits_to_hmm.py  align_using_input_msa.py  alignedfasta_to_unalignedfasta.py  alignhits.pl  alignments_lib.py  amap-multipw.py  bin_fasta_for_flowerpower.py  buildFamily.py  build_and_score_models_for_pair.py  build_ghmm.py  build_hhalign_kerf_shmms.py  build_hmmer_hmm_from_alignment_8cpus.py  build_infoshare_kerf_shmms.py  build_model.py  build_models.py  build_models_for_target.py  build_one_model.py  build_w05_kerf_shmms.py  buildali.pl  casp_create_hmms.py  casp_non_matchmaker_align.py  casp_shmm_alignment.py  cattrees.py  cleanss2.pl  cleanss2.py  clustalw-multipw.py  collect_tsvmod_scores_for_pair.py  compress_alignment.py  compress_alignments_for_pair.py  compute_alignment_conservation.py  compute_all_q_combined_scores.py  compute_all_signals.py  compute_q_combined_score.py  compute_ss_score.py  compute_ss_score_ruchira.py  concat_for_multipw.py  consensus_alignments.py  convert.pl  convert_pairwise_orthoxml_to_text.py  (+104 more)
bpg/: Classifiers.py  README.txt
bpg/bpgtools/: AUTHORS  LICENSE  Makefile.am  Makefile.in  README  configure  configure.ac  reconf
bpg/bpgtools/src/: AlignmentSVG.cpp  AlignmentSVG.h  AlignmentStatistics.cpp  AlignmentStatistics.h  Blosum62.cpp  Blosum62.h  Fasta.cpp  Fasta.h  Makefile  Makefile.am  Makefile.in  Node.cpp  Node.h  SVG.cpp  SVG.h  Sequence.cpp  Sequence.h  Tree.cpp  Tree.h  TreeSVG.cpp  TreeSVG.h  astats.cpp  kerf.cpp  newick2svg.cpp
bpg/common/: BPGPWID.py  blast.py  blosum62.py  bpg_tooltip.js  build_hmmer3_hmm_from_alignment.py  create_genome_pages.py  dcheuristic.py  fasta.py  fatcat.py  inputCheck.py  launch_jobs_on_n_cores.py  legacy_utils.py  sequence.py  submit_job_on_queue.py
bpg/docs/: flowerpower_doc.txt
bpg/fatcat/: fatcat_daemon.py  get_best_nodes.py  get_families.py
bpg/flowerpower/: assign_seqs_to_shmms  find_hits_from_organisms_during_clustering.py  flock  top_by_pwid.py  (+8 more)
pfacts003/: README.txt  urls.py  views.py
(+2606 files in other folders)
